--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,18 @@
         <spring-boot-version>2.1.3.RELEASE</spring-boot-version>
         <yasson-version>1.0.1</yasson-version>
 	</properties>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>myapp-snapshot</id>
+            <url>http://localhost:8081/nexus/content/repositories/myapp-snapshot</url>
+        </snapshotRepository>
+        <Repository>
+            <id>myapp-release</id>
+            <url>http://localhost:8081/nexus/content/repositories/myapp-release</url>
+        </Repository>
+    </distributionManagement>
+
     <repositories>
         <repository>
             <id>apache-staging</id>
